// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when not paused 1`] = `
<vm-playback-control>
  <vm-control keys="k" label="Playback" pressed="">
    <vm-icon href="#vime-pause"></vm-icon>
    <vm-tooltip position="top">
      Pause (k)
    </vm-tooltip>
  </vm-control>
</vm-playback-control>
`;

exports[`should be structurally sound when paused 1`] = `
<vm-playback-control>
  <vm-control keys="k" label="Playback">
    <vm-icon href="#vime-play"></vm-icon>
    <vm-tooltip position="top">
      Play (k)
    </vm-tooltip>
  </vm-control>
</vm-playback-control>
`;
